SPIDER_ws/log/build_2024-04-01_19-04-54/spider_nav/stdout_stderr.log
running egg_info
writing ../../build/spider_nav/spider_nav.egg-info/PKG-INFO
writing dependency_links to ../../build/spider_nav/spider_nav.egg-info/dependency_links.txt
writing entry points to ../../build/spider_nav/spider_nav.egg-info/entry_points.txt
writing requirements to ../../build/spider_nav/spider_nav.egg-info/requires.txt
writing top-level names to ../../build/spider_nav/spider_nav.egg-info/top_level.txt
reading manifest file '../../build/spider_nav/spider_nav.egg-info/SOURCES.txt'
writing manifest file '../../build/spider_nav/spider_nav.egg-info/SOURCES.txt'
running build
running build_py
copying spider_nav/spider_gps_pub.py -> /home/dfolse/repos/SPIDER/SPIDER_ws/build/spider_nav/build/lib/spider_nav
running install
running install_lib
copying /home/dfolse/repos/SPIDER/SPIDER_ws/build/spider_nav/build/lib/spider_nav/spider_gps_pub.py -> /home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/python3.8/site-packages/spider_nav
byte-compiling /home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/python3.8/site-packages/spider_nav/spider_gps_pub.py to spider_gps_pub.cpython-38.pyc
  File "/home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/python3.8/site-packages/spider_nav/spider_gps_pub.py", line 6
    import
          ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/python3.8/site-packages/spider_nav-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/spider_nav/spider_nav.egg-info to /home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/python3.8/site-packages/spider_nav-0.0.0-py3.8.egg-info
running install_scripts
Installing gps_waypoint_logger script to /home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/spider_nav
Installing interactive_waypoint_follower script to /home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/spider_nav
Installing logged_waypoint_follower script to /home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/spider_nav
Installing spider_gps_pub script to /home/dfolse/repos/SPIDER/SPIDER_ws/install/spider_nav/lib/spider_nav
writing list of installed files to '/home/dfolse/repos/SPIDER/SPIDER_ws/build/spider_nav/install.log'
